SN-18 added notifications for user endpoint and test
