# api/internal/app/server/server.go
@@ -5,10 +5,13 @@ import (
 	"fmt"
 	"log"
 	"net/http"
+	"os"
 	_ "social-network/docs"
 	"social-network/internal/model"
 	"social-network/internal/store"
+	"social-network/pkg/jwttoken"
 	"social-network/pkg/router"
+	"time"
 
 	httpSwagger "github.com/swaggo/http-swagger"
 )
@@ -67,6 +70,8 @@ func configureRouter(s *Server) {
 	s.router.GET("/api/v1/auth/user/followers/{id}", s.userFollowers())
 	s.router.GET("/api/v1/auth/user/following/{id}", s.userFollowing())
 	s.router.GET("/api/v1/auth/user/posts/{id}", s.userPosts())
+	s.router.GET("/api/v1/auth/user/notifications", s.userNotifications())
+
 	//---------NOTIFICATION---------//
 	s.router.POST("/api/v1/auth/notification/create", s.createNotification())
 	s.router.DELETE("/api/v1/auth/notification/delete/{id}", s.deleteNotification())
@@ -75,7 +80,7 @@ func configureRouter(s *Server) {
 	s.router.GET("/api/v1/auth/unfollow/{id}", s.handleUnfollow())
 	s.router.POST("/api/v1/auth/follow/request", s.handleFollowRequest())
 
-	// s.router.GET("/login", s.login())
+	s.router.GET("/login", s.login())
 
 }
 
@@ -100,20 +105,20 @@ func (s *Server) decode(r *http.Request, data interface{}) error {
 
 //FOR DEVELOPMENT PURPOSES TO GENERATE JWT TOKEN
 
-// func (s *Server) login() http.HandlerFunc {
-// 	return func(w http.ResponseWriter, r *http.Request) {
-// 		newToken := jwttoken.NewClaims()
-// 		newToken.Set("user_id", "testUser2")
-// 		newToken.SetTime("exp", time.Now().Add(time.Hour*100))
-// 		a := jwttoken.HmacSha256(os.Getenv(jwtKey))
+func (s *Server) login() http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		newToken := jwttoken.NewClaims()
+		newToken.Set("user_id", "testUSERid")
+		newToken.SetTime("exp", time.Now().Add(time.Hour*100))
+		a := jwttoken.HmacSha256(os.Getenv(jwtKey))
 
-// 		token, err := a.Encode(newToken)
-// 		if err != nil {
-// 			s.error(w, http.StatusBadRequest, err)
-// 			return
-// 		}
-// 		fmt.Println("TEST")
+		token, err := a.Encode(newToken)
+		if err != nil {
+			s.error(w, http.StatusBadRequest, err)
+			return
+		}
+		fmt.Println("TEST")
 
-// 		s.respond(w, http.StatusOK, Response{Data: token})
-// 	}
-// }
+		s.respond(w, http.StatusOK, Response{Data: token})
+	}
+}
